--- a/resume.html
+++ b/resume.html
@@ -16,6 +16,7 @@
     dans mon chemin d'étre devloppeur j'ai etudier 2éme informatique et j'ai choisi de continuer dans le domaine d'informatique 
     j'essaye d'étre mieux c'est pourcela j'ai choisisser GOMYCODE</h2> <img src="./téléchargement.png" alt="GOMYCODE"width="4%">
    </p>
+   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus a eligendi asperiores, odio enim veritatis obcaecati esse praesentium nam pariatur?</p>
 </main>
 <footer> <h1> c'est mon compte github je vais le mettre ici </h1><a href="https://github.com/"> github</a> <img src="./GitHub-Logo.png" alt="github" width="9%"></footer>
     
